actualizacion de mapa e imagenes

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,10 +34,10 @@
                   <h2 class="mb-6 text-sm font-semibold uppercase text-white">Contactanos</h2>
                   <ul class="text-gray-400 font-medium">
                       <li class="mb-4">
-                          <a href="https://flowbite.com/" class="hover:underline">Nosotros</a>
+                          <a href="/nosotros" class="hover:underline">Nosotros</a>
                       </li>
                       <li>
-                          <a href="#" class="hover:underline">Reservar</a>
+                          <a href="https://wa.me/573112814717" class="hover:underline">Reservar</a>
                       </li>
                   </ul>
               </div>
@@ -48,7 +48,7 @@
                           <a href="/" class="hover:underline ">Home</a>
                       </li>
                       <li>
-                          <a href="#" class="hover:underline">Habitaciones</a>
+                          <a href="/page" class="hover:underline">Habitaciones</a>
                       </li>
                   </ul>
               </div>
