--- a/src/components/Habitaciones.astro
+++ b/src/components/Habitaciones.astro
@@ -4,14 +4,16 @@
 <section class="text-xl text-left px-20 max-w-[105ch] text-pretty mx-auto my-24 ">
   
 
-  <h2 class="text-4xl lg:text-5xl font-tomaso font-semibold text-center text-balance mb-10 lg:mb-20">Habitaciones Comodas</h2>
+  <h1 class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide">Habitaciones Comodas</h2>
     <p>
-        Contamos con <strong> mas de 30 habitaciones  elegantes y confortables,</strong> nuestro hotel ofrece el refugio perfecto para tus vacaciones o tu dia a dia. Sumérgete en un ambiente veraniego, donde cada detalle está diseñado para tu <strong>máximo confort y relajación.</strong> 
+        Contamos con<strong> mas de 30 habitaciones  elegantes y confortables.</strong> Nuestro hotel ofrece el refugio perfecto para tus vacaciones o tu dia a dia. Sumérgete en un ambiente veraniego, donde cada detalle está diseñado para tu <strong>máximo confort y relajación.</strong> 
     </p>
+    
+    
 </section>
 <div class="grid grid-cols-1 md:grid-cols-3 max-w-6xl gap-6 mx-auto py-20">
   <div>
-      <img src="./img-7.webp" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
+      <img src="./habitacion3.jpg" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
   </div>
   <div>
       <img src="./img-8.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
@@ -37,7 +39,7 @@
       object-fit: cover;
     }
     .my-component {
-    padding: 20px;
+    padding: 14px;
     border-radius: 8px; /* O cualquier otro estilo que desees */
   }
   </style>
