--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -4,7 +4,7 @@
 <section class="text-xl text-left px-20 max-w-[105ch] text-pretty mx-auto my-24 ">
     <img class="w-15 mb-10 m-auto" src="./logo1.png" alt="Logo hotel emporio real">
 
-    <h1 class="text-black text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide">
+    <h1 class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide">
         Hotel Emporio Real
     </h1>
     <p>
@@ -12,7 +12,7 @@
     </p>
 
     <p>
-        Contamos con <strong> mas de 30 habitaciones elegantes y confortables,</strong> nuestro hotel ofrece el refugio perfecto para tus vacaciones junto al mar. Sumérgete en un ambiente veraniego, donde cada detalle está diseñado para tu máximo confort y relajación.
+        Contamos con <strong> mas de 30 habitaciones elegantes y confortables,</strong> nuestro hotel ofrece el refugio perfecto para tus vacaciones. Sumérgete en un ambiente veraniego, donde cada detalle está diseñado para tu máximo confort y relajación.
     </p>
 
 </section>
@@ -31,7 +31,7 @@
 
 <style>
     .my-component {
-    padding: 20px;
+    padding: 14px;
     border-radius: 8px; /* O cualquier otro estilo que desees */
   }
 </style>
