--- a/src/components/pages/PageHabitaciones.astro
+++ b/src/components/pages/PageHabitaciones.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 import Galeria from "../Galeria.astro";
 ---
 
-<Layout title="PageHabitaciones" description="Habitaciones">
+<Layout title="Hotel Emporio Real" description="Habitaciones">
    
      
   
