--- a/src/components/Entorno.astro
+++ b/src/components/Entorno.astro
@@ -1,10 +1,8 @@
-
-
-
-<section class="text-xl text-left px-20 max-w-[105ch] text-pretty mx-auto my-24 ">
+<div style="background-color: #eef4f6;" class="my-component">
+<section class="text-xl text-left px-20 max-w-[105ch] text-pretty mx-auto my-24">
     <img class="w-24 mb-10 m-auto" src="./ubicacion.png" alt="Logo hotel emporio real">
 
-    <h1 class="text-black text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide">
+    <h1 class="text-4xl font-semibold text-center text-wrap mx-auto mb-10 tracking-wide">
        Explora Yopal Casanare
     </h1>
     <p>
@@ -21,10 +19,18 @@
         <img class="rounded-lg bg-gray-500" src="./yopal1.jpg" alt="">
     </div >
     <div class="">
-        <img class="rounded-lg  bg-gray-500" src="./yopal2.jpg" alt="">
+        <img class="rounded-lg bg-gray-500" src="./yopal2.jpg" alt="">
     </div>
     <div class="">
         <img class="rounded-lg bg-gray-500" src="./yopal3.jpg" alt="">
     </div>
 </div >
+</div>
 
+
+<style>
+    .my-component {
+    padding: 20px;
+    border-radius: 8px; /* O cualquier otro estilo que desees */
+  }
+</style>
