--- a/src/components/pages/Nosotros.astro
+++ b/src/components/pages/Nosotros.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 import Intro from "../Intro.astro"
 ---
 
-<Layout title="PageHabitaciones" description="Habitaciones">
+<Layout title="Hotel Emporio Real" description="Habitaciones">
    
      
   
