--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro'
 import Imagen from '../components/Imagen.astro'
 import Elegirnos from '../components/Elegirnos.astro'
 import Entorno from '../components/Entorno.astro'
@@ -10,7 +10,8 @@ import Intro from '../components/Intro.astro'
 import Numeros from '../components/Numeros.astro'
 import Reserva from '../components/Reserva.astro'
 import Video from '../components/Video.astro'
-import Mapa from '../components/Mapa.astro'
+
+import Ubicacion from '../components/Ubicacion.astro'
 
 ---
 
@@ -20,11 +21,13 @@ import Mapa from '../components/Mapa.astro'
 		<Intro />
 		<Numeros />
 		<Habitaciones />
+		<Elegirnos />
 		<Entorno />
+		<Ubicacion />
 		<Reserva />
 		<Video />
-		<Elegirnos />
-		<Mapa />
+		
+		
 
 		
 		
