--- a/src/components/Imagen.astro
+++ b/src/components/Imagen.astro
@@ -1,6 +1,6 @@
 <div class="w-full h-screen relative">
     <!-- Imagen que ocupa toda la pantalla -->
-    <img class="w-full h-full object-cover" src="/img1.jpg" alt="">
+    <img class="w-full h-full object-cover" src="/img1.webp" alt="">
 
     <!-- Capa oscura superpuesta -->
     <div class="absolute inset-0 bg-black opacity-50"></div>
