--- a/src/components/pages/Nosotros.astro
+++ b/src/components/pages/Nosotros.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 
-import Intro from "../Intro.astro"
+import NosotrosPage from "../NosotrosPage.astro"
 ---
 
 <Layout title="Hotel Emporio Real" description="Habitaciones">
@@ -11,7 +11,7 @@ import Intro from "../Intro.astro"
      
     <main>
       
-      <Intro />
+      <NosotrosPage />
 
   
     </main>
