--- a/src/components/Habitaciones.astro
+++ b/src/components/Habitaciones.astro
@@ -13,7 +13,7 @@
 </section>
 <div class="grid grid-cols-1 md:grid-cols-3 max-w-6xl gap-6 mx-auto py-20">
   <div>
-      <img src="./habitacion3.jpg" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
+      <img src="./habitacion3.webp" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
   </div>
   <div>
       <img src="./img-8.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
