--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -18,10 +18,10 @@
 </section>
 <div class="grid grid-cols-1 md:grid-cols-2 max-w-6xl gap-6 mx-auto py-20">
     <div>
-        <img src="./img2.jpg" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
+        <img src="./img2.webp" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
     </div>
     <div>
-        <img src="./img3.jpg" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
+        <img src="./img3.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
     </div>
     
 </div>
