--- a/src/components/Habitaciones.astro
+++ b/src/components/Habitaciones.astro
@@ -13,13 +13,13 @@
 </section>
 <div class="grid grid-cols-1 md:grid-cols-3 max-w-6xl gap-6 mx-auto py-20">
   <div>
-      <img src="./habitacion3.webp" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
+      <img src="./cambio2.webp" alt="Responsive image 1" class="w-full h-auto rounded-lg bg-gray-500">
   </div>
   <div>
       <img src="./img-8.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
   </div>
   <div>
-    <img src="./img-9.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
+    <img src="./cambio3.webp" alt="Responsive image 2" class="w-full h-auto rounded-lg bg-gray-500">
 </div>
 
 <a class="text-xl text-left px-20 max-w-[105ch] text-pretty mx-auto my-2 text-blue-700 " href="/page">Ver más</a>
