--- a/src/components/VideoHotel.astro
+++ b/src/components/VideoHotel.astro
@@ -1,12 +1,9 @@
-
-
-
 <section class="w-full p-20 max-w-6xl mx-auto ">
     <h3 class="uppercase text-black text-4xl tracking-wide text-center font-semibold mb-10 text-balance mx-auto">
-        Conoce Yopal Casanare
+        Conócenos
         <lite-youtube 
         class="shadow-2xl shadow-white/10 rounded-xl"
-        videoid="RxyWnIf3yKI"
+        videoid="APD5NQrx2vA"
         videotitle="Conocenos">
         
 
