--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Intro from '../components/Intro.astro'
 import Numeros from '../components/Numeros.astro'
 import Reserva from '../components/Reserva.astro'
 import Video from '../components/Video.astro'
-
+import VideoHotel from '../components/VideoHotel.astro'
 import Ubicacion from '../components/Ubicacion.astro'
 
 ---
@@ -19,6 +19,7 @@ import Ubicacion from '../components/Ubicacion.astro'
 	<Imagen />
 	<main>
 		<Intro />
+		<VideoHotel />
 		<Numeros />
 		<Habitaciones />
 		<Elegirnos />
